deployed 5-5-2016 240pm, fixed overflow on demo, increased cores and memory

--- a/clustergrammer/static/css/custom_new.css
+++ b/clustergrammer/static/css/custom_new.css
@@ -6,6 +6,10 @@
   margin-bottom: 20px;
 }*/
 
+html{
+  overflow: hidden;
+}
+
 /*stylize footer */
 footer {
   text-align: center;
